# sir_launchalot

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
resources/: sir-launchalot.desktop
scripts/: build-appimage-docker.sh  build-appimage.sh
src/: main.cpp
src/core/: AccountManager.cpp  AccountManager.h  Gw2ApiClient.cpp  Gw2ApiClient.h  InstallDetector.cpp  InstallDetector.h  LutrisIntegration.cpp  LutrisIntegration.h  OverlayManager.cpp  OverlayManager.h  ProcessManager.cpp  ProcessManager.h  UpdateChecker.cpp  UpdateChecker.h  WineManager.cpp  WineManager.h
src/ui/: AccountDialog.cpp  AccountDialog.h  AltSetupWizard.cpp  AltSetupWizard.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SetupWizard.cpp  SetupWizard.h
